fix: build patches nd conflicting resources

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -40,7 +40,8 @@
     "legal": {
       "privacy": "Datenschutz",
       "terms": "Nutzungsbedingungen",
-      "imprint": "Impressum"
+      "imprint": "Impressum",
+      "cookies": "Cookies"
     },
     "social": {
       "googleMaps": "Google Maps",
