--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -40,7 +40,8 @@
     "legal": {
       "privacy": "Privacidad",
       "terms": "Condiciones",
-      "imprint": "Aviso Legal"
+      "imprint": "Aviso Legal",
+      "cookies": "Cookies"
     },
     "social": {
       "googleMaps": "Google Maps",
