--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -40,7 +40,8 @@
     "legal": {
       "privacy": "Confidentialité",
       "terms": "Conditions",
-      "imprint": "Mentions Légales"
+      "imprint": "Mentions Légales",
+      "cookies": "Cookies"
     },
     "social": {
       "googleMaps": "Google Maps",
