--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -40,7 +40,8 @@
     "legal": {
       "privacy": "Privacy",
       "terms": "Termini",
-      "imprint": "Note Legali"
+      "imprint": "Note Legali",
+      "cookies": "Cookie"
     },
     "social": {
       "googleMaps": "Google Maps",
