--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -40,7 +40,8 @@
     "legal": {
       "privacy": "Privacy",
       "terms": "Voorwaarden",
-      "imprint": "Wettelijke Vermelding"
+      "imprint": "Wettelijke Vermelding",
+      "cookies": "Cookies"
     },
     "social": {
       "googleMaps": "Google Maps",
