--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -157,7 +157,8 @@
           "sending": "Enviando...",
           "sendMessage": "Enviar Mensaje"
         },
-        "successMessage": "¡Gracias por su mensaje! Nos pondremos en contacto con usted pronto."
+        "successMessage": "¡Gracias por su mensaje! Nos pondremos en contacto con usted pronto.",
+        "errorMessage": "No se pudo enviar su mensaje. Por favor, intente nuevamente o contáctenos directamente."
       }
     }
   },
